--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -79,6 +79,9 @@
 .fw-bold{
 	font-weight: bold;
 }
+.fw900{
+	font-weight: 900;
+}
 /****************************************************
 	Common CSS End
 *****************************************************/
@@ -298,16 +301,60 @@
 /****************************************************
 	CTA CSS Start
 *****************************************************/
-
-
+.email{
+    width: 25%;
+    height: 51px;
+    border: 1px solid #fff;
+    padding: 5px;
+    background: transparent;
+}
+.email:focus{
+	border: 1px solid #fff;
+	outline: none;
+}
+::placeholder{
+	color: #fff;
+}
+.test_btn{
+	background: #fff;
+    color: #000;
+    padding: 11px;
+    border: 3px solid #fff;
+    margin-top: -2px;
+}
 /****************************************************
 	CTA CSS End
 *****************************************************/
 /****************************************************
 	Footer CSS Start
 *****************************************************/
-
-
+.left-link li a{
+	color: #fff;
+	line-height: 32px;
+}
+.left-link li a:hover{
+	color: #56ab2f;
+}
+.line{
+	border-top: 1px solid #56ab2f;
+}
+.footer-icon li{
+	height: 40px;
+	width: 40px;
+	line-height: 40px;
+	text-align: center;
+	border: 1px solid #56ab2f;
+	border-radius: 50%;
+	margin-left: 10px;
+}
+.footer-icon li a{
+	padding: 10px;
+	color: #fff;
+}
+.footer-icon li a:hover{
+	
+	color: #56ab2f;
+}
 /****************************************************
 	Footer CSS End
 *****************************************************/
